# Traindata

./: .gitignore  README  Traindata.py  main.ipynb  pyproject.toml  setup.py  tutorial.ipynb  utilities.py
traindata/: __init__.py  core.py
